resolve mobile collapse

--- a/src/assets/styles/template/_side-nav.css
+++ b/src/assets/styles/template/_side-nav.css
@@ -12,7 +12,7 @@
 }
 
 .side-nav-light {
-  @apply bg-white border-r border-gray-200;
+  @apply bg-white ;
 }
 
 .side-nav-dark {
